[package]
name = "ReView"
version = "0.0.0"
authors = ["Dominic Heun <dominic.heun@gmx.net>"]
edition = "2018"
build = "build.rs"
repository = "https://github.com/thedome/review"
description = "A simple program to use the remarkable live view feature"
readme = "README.md"

[features]
session_from_config = []
QJsonBigEndian = []

[dependencies]
reqwest = { version = "0.11.6", features = ["default-tls", "json"] }
env_logger = "0.9.0"
websocket = "0.26.2"
json = "0.12.4"
uuid = { version = "0.8.2", features = ["v4"] }
glib = "0.14.8"
cairo-rs = { version = "^0", features = ["v1_16", "pdf"] }
gdk = "0.13.2"
byteorder = "1.4.3"
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"

[dependencies.tokio]
version = "1.13.0"
features = ["macros", "rt-multi-thread"]

[dependencies.gtk]
version = "^0"
features = ["v3_24"]

[dependencies.gio]
version = "0.9.1"
features = ["v2_44"]

[dependencies.log]
version = "0.4.14"
features = ["max_level_trace", "release_max_level_warn"]

