[package]
name = "ReView"
version = "0.0.0"
authors = ["Dominic Heun <dominic.heun@gmx.net>"]
edition = "2021"
license = "Apache-2.0"
build = "build.rs"
repository = "https://github.com/thedome/review"
description = "A simple program to use the remarkable live view feature"
readme = "README.md"

[[bin]]
name = "ReView"
path = "src/main.rs"

[features]
session_from_config = []

[dependencies]
reqwest = { version = "0.11.13", features = ["default-tls", "json"] }
env_logger = "0.10.0"
json = "0.12.4"
uuid = { version = "1.2.2", features = ["v4"] }
glib = "0.16.4"
cairo-rs = { version = "^0", features = ["v1_16", "pdf"] }
gdk = "0.16.0"
qt-json = "1.0.2"
directories = "4.0.1"
base64 = "0.13.1"
futures-util = "0.3.25"
async-trait = "0.1.58"

[dependencies.tokio-tungstenite]
version = "0.18.0"
features = ["native-tls"]

[dependencies.tokio]
version = "1.22.0"
features = [ "rt-multi-thread", "macros"]

[dependencies.gtk]
version = "^0"
features = ["v3_24"]

[dependencies.gio]
version = "0.9.1"
features = ["v2_44"]

[dependencies.log]
version = "0.4.17"
features = ["max_level_trace", "release_max_level_warn"]

[dev-dependencies]
num = "0.4"
httpmock = { version = "0.6", features = ["color"] }